--- a/github_portfolio-main/index.html
+++ b/github_portfolio-main/index.html
@@ -161,11 +161,11 @@
                   </a>
                   <a href="tel:+15551234567" class="contact-item">
                     <i class="bi bi-telephone"></i>
-                    +1 (555) 123-4567
+                    +64 22 501 2439
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
-                    San Francisco, CA
+                    Mount Eden Ave.
                   </a>
                 </div>
               </div>
