--- a/github_portfolio-main/index.html
+++ b/github_portfolio-main/index.html
@@ -165,7 +165,7 @@
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
-                    Mount Eden Ave.
+                    2 Dunbar Road,Mount Eden Ave,Auckland
                   </a>
                 </div>
               </div>
