--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
               <div class="hero-text">
                 <h1>Snap<span class="accent-text">Folio</span></h1>
-                <h2>Alexander Chen</h2>
+                <h2>Oshadee Kaushalya</h2>
                 <p class="lead">I'm a <span class="typed" data-typed-items="UI/UX Designer, Web Developer, Brand Strategist, Creative Director"></span></p>
                 <p class="description">Passionate about creating exceptional digital experiences that blend innovative design with functional development. Let's bring your vision to life.</p>
 
@@ -151,17 +151,17 @@
               </div>
 
               <div class="profile-content">
-                <h3>Marcus Thompson</h3>
+                <h3>Oshadee Kaushalya</h3>
                 <p class="profession">Creative Director &amp; Developer</p>
 
                 <div class="contact-links">
                   <a href="mailto:marcus@example.com" class="contact-item">
                     <i class="bi bi-envelope"></i>
-                    marcus@example.com
+                    oshadeedasanayake@gmail.com
                   </a>
                   <a href="tel:+15551234567" class="contact-item">
                     <i class="bi bi-telephone"></i>
-                    +1 (555) 123-4567
+                    +64225012439
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
