--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="profile-card">
               <div class="profile-header">
                 <div class="profile-image">
-                  <img src="assets/img/profile/Portfolio_Image" alt="Profile Image" class="img-fluid">
+                  <img src="assets/img/profile/portfolio_1.jpeg" alt="Profile Image" class="img-fluid">
                 </div>
               </div>
               <div class="profile-content">
