Trying to update the profile image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
               <div class="hero-visual">
                 <div class="profile-container">
-                  <img src="assets/img/profile/profile-2.webp" alt="Oshadee Kaushalya" class="profile-image">
+                  <img src="assets/img/profile/portfolio_1.jpeg" alt="Oshadee Kaushalya" class="profile-image">
                 </div>
               </div>
             </div>
@@ -102,9 +102,9 @@
                     <i class="bi bi-envelope"></i>
                     oshadeedasanayake@gmail.com
                   </a>
-                  <a href="tel:+64225012439" class="contact-item">
+                  <a href="tel:+64215022430" class="contact-item">
                     <i class="bi bi-telephone"></i>
-                    +64 22 501 2439
+                    +64 21 502 2430
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
