--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </div>
               <div class="profile-content">
                 <h3>Oshadee Kaushalya</h3>
-                <p class="profession">Software Engineer | Developer</p>
+                <p class="profession">Designer | Developer</p>
                 <div class="contact-links">
                   <a href="mailto:oshadeedasanayake@gmail.com" class="contact-item">
                     <i class="bi bi-envelope"></i>
@@ -157,7 +157,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Instructor & Assistant Lecturer</h4>
+              <h4>Assistant Lecturer</h4>
               <p class="company"><i class="bi bi-building"></i> UCSC</p>
               <ul>
                 <li>Taught programming, software engineering, and mobile computing practical sessions.</li>
@@ -189,10 +189,6 @@
               <div class="info-item">
                 <i class="bi bi-geo-alt"></i>
                 <p>Auckland, New Zealand</p>
-              </div>
-              <div class="info-item">
-                <i class="bi bi-telephone"></i>
-                <p>+64 22 501 2439</p>
               </div>
               <div class="info-item">
                 <i class="bi bi-envelope"></i>
