--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
               <div class="hero-visual">
                 <div class="profile-container">
-                  <img src="assets/img/profile/portfolio_1.jpeg" alt="Oshadee Kaushalya" class="profile-image">
+                  <img src="assets/img/profile/profile-square-2.webp" alt="Oshadee Kaushalya" class="profile-image">
                 </div>
               </div>
             </div>
